force-app/main/default/objects/Client__c/fields/Additional__c.field-meta.xml
<CustomField>
    <fullName>Additional__c</fullName>
    <label>Additional Comments</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>