force-app/main/default/objects/Client__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client Name</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>