force-app/main/default/objects/Client__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <label>Current Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Taking Support</fullName>
            </value>
            <value>
                <fullName>Previously Worked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>