force-app/main/default/objects/Client__c/fields/Field_Technology__c.field-meta.xml
<CustomField>
    <fullName>Field_Technology__c</fullName>
    <label>Field Technology</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>salesforce</fullName>
            </value>
            <value>
                <fullName>Nodej</fullName>
            </value>
            <value>
                <fullName>Wordpress</fullName>
            </value>
            <value>
                <fullName>Angular</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>