force-app/main/default/objects/Client__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Current__c</columns>
    <columns>Field_Technology__c</columns>
    <columns>Additional__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>